# PhoneStoreAIBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  seed.py  train_test_data.py
.github/workflows/: deploy.yml
ai/: client.py  prompts.py
ai/tools/: __init__.py  base_tool.py  fetch_history.py  search_product.py  send_message.py  track_interst.py  user_interest.py
bot/handlers/: chat.py
db/: init.py  models.py
