[project]
name = "phone-store-ai-bot"
version = "0.1.0"
description = "Aiogram AI-powered Telegram bot for a phone store"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "anthropic>=0.92.0",
    "python-dotenv>=1.0.0",
    "tortoise-orm[asyncpg]>=0.21.0",
    "aerich>=0.7.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai", "bot", "db", "config"]

[tool.aerich]
tortoise_orm = "db.init.TORTOISE_ORM"
location = "./migrations"
src_paths = ["."]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
